# esp32-doom

./: .gitignore  .gitmodules  CMakeLists.txt  CORRECTED_MEMORY_ANALYSIS.md  INSTRUMENTATION.md  NETWORK_OPTIMIZATION_GUIDE.md  NETWORK_OPTIMIZATION_INTEGRATION_GUIDE.md  OPTIMIZATION_INTEGRATION_GUIDE.md  REFACTORED_ARCHITECTURE.md  doom-palette.h  flash_all.py  main.bak  newdoom1_silent.wad  partitions.csv  readme.rst  sdkconfig  sdkconfig.defaults
components/framebuffer-server/: CMakeLists.txt  frame_queue.c  input_handler.c  instrumentation_stubs.c  websocket_server.c  ws_deflate.c
components/framebuffer-server/include/: frame_queue.h  input_handler.h  instrumentation_interface.h  websocket_server.h  ws_deflate.h
components/prboom/: CMakeLists.txt  d_client.c  d_main.c  joystick_vars.c  lprintf.c  m_menu.c  m_misc.c  p_setup.c  (+9 more)
components/prboom-esp32-compat/: CMakeLists.txt  ESP32_RENDERING_OPTIMIZATIONS.md  esp32_rendering_optimizations.c  esp32_rendering_optimizations.h  gamepad.c  i_system.c  i_video.c  instrumentation_stubs.c
components/prboom-wad-tables/: CMakeLists.txt
data/: doom-palette.js  index.html
main/: CMakeLists.txt  delta_encoding.c  frame_broadcaster.c  http_handlers.c  instrumentation.c  main.c  network_transmission.c  network_transmission_optimizations.c  performance_profiler.c  server_integration.c  websocket_server.c
main/include/: delta_encoding.h  http_handlers.h  instrumentation.h  network_transmission.h  network_transmission_optimizations.h  performance_profiler.h  server_integration.h  simple_profiler.h  websocket_server.h
(+7 files in other folders)
